--- a/README.Rmd
+++ b/README.Rmd
@@ -47,11 +47,11 @@ httr::set_config(use_proxy(url = "xxx.xxx.xxx.xxx, port = yy))
 ```
 
 ### Usage
-An example using both possible input formats for perturbation tables is given in the main-function of the packge `perturbTable()`
+An example using both possible input formats for perturbation tables is given in the main-function of the packge `perturb_table()`
 
 ```
 library(cellKey)
-?perturbTable
+?perturb_table
 ```
 
 Once finished, the package will also contain a package vignette. The unfinished introduction vignette can be looked at using `cellKey::ck_vignette()` or via the automatically deployed documentation by clicking [**here**](https://sdctools.github.io/cellKey/articles/introduction.html). The complete [**documentation**](https://sdctools.github.io/cellKey/) is also updated automatically and can be browes online.
